-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.8.0-beta1
-
-
1d933953a45da8d48dbb43ec6f552ae190b81f08
No matter how wide the side panel is, the date column stays out of visible range until you scroll right. But then the branches are no longer visible.
Expected:
When the panel is wide enough, both columns should be visible without scrolling. If the panel is too narrow, a scroll bar should appear.
- relates to
-
QTCREATORBUG-21088 Git Branches side panel does not appear in Debug mode
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-21081 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
240132,2 | Git: Fix columns visibility in branch view | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |