Git: Fix columns visibility in branch view

The date column was always outside the visible
range and could only be reached with scrolling.

Change-Id: Ia690a4276f1b489b1f05c0d7f251b575509c9854
Fixes: QTCREATORBUG-21081
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>